--- a/main.html
+++ b/main.html
@@ -8,7 +8,18 @@
 
 <body>
 	<!-- the entire body must be written by student -->
+	<img src = "myimage.jpg"/> 
+	<heading> Nadeem Abbas</heading>
+	<a href="https://linkedin.com/nadeem80"></a>
+	<section id="skills">Java, javascript, HTML, CSS</section>
+	<section id="projects">
+		<ul>
+			<li>School App</li>
+			<li>Hospital</li>
+		</ul>
+	</section>
     <script type="text/javascript" src="./script.js">
+		
 </script>
 
 </body>
