--- a/main.html
+++ b/main.html
@@ -9,8 +9,8 @@
 <body>
 	<!-- the entire body must be written by student -->
 	<img src = "myimage.jpg"/> 
-	<heading> Nadeem Abbas</heading>
-	<a href="https://linkedin.com/nadeem80"></a>
+	<h1> Nadeem Abbas</h1>
+	<a href="https://linkedin.com/nadeem80">my linkedin profile</a>
 	<section id="skills">Java, javascript, HTML, CSS</section>
 	<section id="projects">
 		<ul>
